[tool.poetry]
name = "candle-demo"
version = "0.1.0"
description = ""
authors = ["Daniel Mesejo <mesejoleon@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
letsql = "^0.1.7"
pillow = "^10.4.0"
segment-anything = "^1.0"
torch = "^2.4.0"
torchvision = "^0.19.0"
ruff = "^0.6.3"
ipython = "^8.27.0"
ibis-framework = "9.0.0"
duckdb = ">=0.10.3,<2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
